--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@tanstack/react-query": "4.24.10",
     "@tanstack/react-query-devtools": "4.24.10",
     "axios": "1.3.4",
+    "boring-avatars": "1.7.0",
     "clsx": "1.2.1",
     "hash-wasm": "4.9.0",
     "next": "13.1.6",
