--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
+    "@faker-js/faker": "7.6.0",
     "@iconify/react": "4.1.0",
     "@mantine/core": "5.10.4",
     "@mantine/hooks": "5.10.4",
@@ -33,6 +34,7 @@
     "react-hook-form": "7.43.2",
     "react-redux": "8.0.5",
     "type-fest": "3.6.0",
+    "typed.js": "2.0.12",
     "zod": "3.20.6"
   },
   "devDependencies": {
