--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.2",
     "react-redux": "8.0.5",
+    "redux-persist": "6.0.0",
     "type-fest": "3.6.0",
     "typed.js": "2.0.12",
     "zod": "3.20.6"
