--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next": "13.1.6",
     "next-auth": "4.19.2",
     "nextjs-progressbar": "0.0.16",
+    "openai": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.2",
