--- a/package.json
+++ b/package.json
@@ -29,10 +29,12 @@
     "next": "13.1.6",
     "next-auth": "4.19.2",
     "nextjs-progressbar": "0.0.16",
+    "openai": "3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "7.43.2",
     "react-redux": "8.0.5",
+    "redux-persist": "6.0.0",
     "type-fest": "3.6.0",
     "typed.js": "2.0.12",
     "zod": "3.20.6"
