--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,7 +19,7 @@
       "@/*": ["src/*"]
     },
     "noErrorTruncation": true,
-    "strict": false,
+    "strict": true,
     "incremental": true,
     "isolatedModules": true
   },
