--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "axios": "1.3.4",
     "boring-avatars": "1.7.0",
     "clsx": "1.2.1",
+    "formidable": "2.1.1",
     "hash-wasm": "4.9.0",
     "next": "13.1.6",
     "next-auth": "4.19.2",
@@ -44,6 +45,7 @@
     "@babel/core": "7.21.0",
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-conventional": "17.4.4",
+    "@types/formidable": "2.0.5",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
