docs: update documetation

--- a/.env.example
+++ b/.env.example
@@ -2,4 +2,4 @@ NEXTAUTH_SECRET="my-secret-key"
 # Doesn't need this when deploying to vercel
 NEXTAUTH_URL="http://localhost:3000/"
 
-TEST_VAR="my secret key"
+OPENAI_API_KEY="sk-***"
