--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@mantine/next": "5.10.4",
     "@mantine/prism": "5.10.4",
     "@mdx-js/loader": "2.3.0",
+    "@mdx-js/mdx": "2.3.0",
     "@mdx-js/react": "2.3.0",
     "@next/mdx": "13.2.4",
     "@reduxjs/toolkit": "1.9.3",
