--- a/package.json
+++ b/package.json
@@ -19,6 +19,11 @@
     "@mantine/core": "5.10.4",
     "@mantine/hooks": "5.10.4",
     "@mantine/next": "5.10.4",
+    "@mantine/prism": "5.10.4",
+    "@mdx-js/loader": "2.3.0",
+    "@mdx-js/mdx": "2.3.0",
+    "@mdx-js/react": "2.3.0",
+    "@next/mdx": "13.2.4",
     "@reduxjs/toolkit": "1.9.3",
     "@tanstack/react-query": "4.24.10",
     "@tanstack/react-query-devtools": "4.24.10",
@@ -36,6 +41,7 @@
     "react-hook-form": "7.43.2",
     "react-redux": "8.0.5",
     "redux-persist": "6.0.0",
+    "rehype-sanitize": "5.0.1",
     "type-fest": "3.6.0",
     "typed.js": "2.0.12",
     "zod": "3.20.6",
@@ -46,6 +52,7 @@
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-conventional": "17.4.4",
     "@types/formidable": "2.0.5",
+    "@types/mdx": "2.0.3",
     "@types/node": "18.14.0",
     "@types/react": "18.0.28",
     "@types/react-dom": "18.0.11",
