--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/react": "11.10.6",
     "@emotion/server": "11.10.0",
     "@faker-js/faker": "7.6.0",
+    "@hookform/resolvers": "3.3.2",
     "@iconify/react": "4.1.0",
     "@mantine/core": "5.10.4",
     "@mantine/hooks": "5.10.4",
