fix: update model form
chore: update model list

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ NEXTAUTH_SECRET="my-secret-key"
 NEXTAUTH_URL="http://localhost:3000/"
 
 OPENAI_API_KEY="sk-***"
+
+LOCAL_AI_BASE_URL="http://localhost:8080"
