--- a/package.json
+++ b/package.json
@@ -15,9 +15,9 @@
     "@faker-js/faker": "7.6.0",
     "@hookform/resolvers": "3.3.2",
     "@iconify/react": "4.1.0",
+    "@mantine/code-highlight": "7.2.2",
     "@mantine/core": "7.2.2",
     "@mantine/hooks": "7.2.2",
-    "@mantine/prism": "6.0.21",
     "@mdx-js/loader": "2.3.0",
     "@mdx-js/mdx": "2.3.0",
     "@mdx-js/react": "2.3.0",
