--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@babel/core": "7.21.0",
     "@commitlint/cli": "17.4.4",
     "@commitlint/config-conventional": "17.4.4",
+    "@tailwindcss/container-queries": "0.1.1",
     "@types/formidable": "2.0.5",
     "@types/mdx": "2.0.3",
     "@types/node": "18.14.0",
@@ -56,6 +57,7 @@
     "@types/react-dom": "18.0.11",
     "@typescript-eslint/eslint-plugin": "5.53.0",
     "@typescript-eslint/parser": "5.53.0",
+    "autoprefixer": "10.4.16",
     "eslint": "8.34.0",
     "eslint-config-airbnb-base": "15.0.0",
     "eslint-config-next": "13.1.6",
@@ -72,8 +74,9 @@
     "postcss-preset-mantine": "1.11.0",
     "postcss-simple-vars": "7.0.1",
     "prettier": "2.8.4",
-    "typescript": "4.9.5",
-    "windicss": "3.5.6",
-    "windicss-webpack-plugin": "1.7.8"
+    "prettier-plugin-tailwindcss": "0.5.7",
+    "tailwind-merge": "2.0.0",
+    "tailwindcss": "3.3.5",
+    "typescript": "4.9.5"
   }
 }
