--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,6 +1,17 @@
 version: '3.9'
 
 services:
+  db:
+    image: postgres:16.1
+    ports:
+      - '5432:5432'
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: chatgbit
+    networks:
+      - pool
+
   local-ai:
     image: quay.io/go-skynet/local-ai:latest
     ports:
