--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@ NEXTAUTH_URL="http://localhost:3000/"
 OPENAI_API_KEY="sk-***"
 
 LOCAL_AI_BASE_URL="http://localhost:8080"
+
+DATABASE_URL="postgresql://postgres:postgres@localhost:5432/chatgbit"
