--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "build": "tsc && next build",
     "preview": "next start -p 4000",
     "lint": "next lint",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "prisma:generate": "prisma generate",
+    "prisma:migrate": "prisma migrate dev",
+    "prisma:migrate:prod": "prisma migrate deploy",
+    "prisma:reset": "prisma migrate reset",
+    "prisma:studio": "prisma studio"
   },
   "dependencies": {
     "@faker-js/faker": "7.6.0",
@@ -21,6 +26,7 @@
     "@mdx-js/mdx": "2.3.0",
     "@mdx-js/react": "2.3.0",
     "@next/mdx": "13.2.4",
+    "@prisma/client": "5.6.0",
     "@reduxjs/toolkit": "1.9.7",
     "@tanstack/react-query": "5.12.2",
     "@tanstack/react-query-devtools": "5.12.2",
@@ -74,6 +80,7 @@
     "postcss-simple-vars": "7.0.1",
     "prettier": "3.1.0",
     "prettier-plugin-tailwindcss": "0.5.7",
+    "prisma": "5.6.0",
     "tailwind-merge": "2.1.0",
     "tailwindcss": "3.3.5",
     "typescript": "5.3.2"
