--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -14,6 +14,8 @@ services:
 
   local-ai:
     image: quay.io/go-skynet/local-ai:latest
+    profiles:
+      - local-ai
     ports:
       - '8080:8080'
     environment:
